"HTTP GET test"

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alma</title>
+    <title>Preisler Test</title>
 </head>
 <body>
-    <h1>PLS</h1>
+    <h1>Üdv a test oldalon</h1>
+    <h2>A Matek web servicet a localhost:8080/api/math oldalon keresztül érheted el</h2>
 </body>
 </html>
